
[package]
name = "minimal_init"
version = "0.1.0"
edition = "2021"

[dependencies]
nix = { version = "0.29.0", features = ["process", "signal"] }

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
